# 03TIO5thElementCS2420

./: CMakeLists.txt
.github/workflows/: CMakeLists.txt
src/: FifthElement.h  FifthElementTester.cpp  LinkedList.h  main.cpp
